@startuml
enum Direction {
    clockwise,
    anticlockwise,
}
class "GameState`1"<TPlayer> {
    - # currentPlayer : int
    + GameState(_players:IEnumerable<TPlayer>)
    + GetCurrentPlayer() : TPlayer
    + NextPlayer() : void
    + GetPlayerList() : List<TPlayer>
    + SetDirection(_direction:Direction) : void
    + GetDeck() : Deck
    + DrawCard() : Card
    + <<virtual>> Deal(cardsToDrawEach:int) : void
    + <<virtual>> SetupDeck(deckCount:int) : void
    + ChooseRandomStartingPlayer() : int
}
class "List`1"<T> {
}
"GameState`1" --> "gameDeck" Deck
"GameState`1" --> "players<TPlayer>" "List`1"
"GameState`1" --> "direction" Direction
@enduml
